--- a/package.json
+++ b/package.json
@@ -11,20 +11,23 @@
         "@mdx-js/loader": "^1.6.22",
         "@mdx-js/mdx": "^1.6.22",
         "@mdx-js/react": "^1.6.22",
-        "@next/mdx": "^10.1.3",
-        "next": "10.1.3",
+        "@next/mdx": "^10.2.0",
+        "next": "10.2.0",
         "next-compose-plugins": "^2.2.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-feather": "^2.0.9",
-        "remark-emoji": "^2.2.0",
-        "remark-images": "^2.0.0"
+        "twemoji": "^13.0.2"
     },
     "devDependencies": {
-        "@types/node": "^14.14.41",
-        "@types/react": "^17.0.3",
+        "@types/node": "^15.0.1",
+        "@types/react": "^17.0.4",
+        "@types/twemoji": "^12.1.1",
         "autoprefixer": "^10.2.5",
-        "postcss": "^8.2.12",
+        "babel-plugin-inline-react-svg": "^2.0.1",
+        "postcss": "^8.2.13",
+        "remark-emoji": "^2.2.0",
+        "remark-images": "^2.0.0",
         "tailwindcss": "^2.1.2",
         "typescript": "^4.2.4"
     }
