--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fontsource/metropolis": "^5.2.5",
     "@solidjs/router": "^0.15.3",
     "@tabler/icons-solidjs": "^3.35.0",
+    "@vercel/analytics": "^1.5.0",
     "animejs": "^4.2.1",
     "solid-js": "^1.9.9",
     "solid-transition-group": "^0.3.0",
