--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@solidjs/router": "^0.15.3",
     "@tabler/icons-solidjs": "^3.35.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "animejs": "^4.2.2",
     "solid-js": "^1.9.9",
     "twemoji": "^14.0.2"
